--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #0a192f">
+  <body style="background-color: #112240">
     
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
